Version 0.3
------------------------------------------------------------------------------

* Addition of several utility functions, mostly kept for internal use, but which clarify the code
* Consistent behavior with invalid codes, allowing ignore, silent conversion to NA, warn with conversion to NA, or stopping.
* Outline of code to read top level ICD-9 definitions from canonical CDC RTF file.
* Progress to
* Made functions magrittr friendly
* Bug fixes, refactoring, more tests
* Include parsing of hierarchy
* Internal function which reads a file from a zip at a URL

Version 0.2.1
------------------------------------------------------------------------------
 * trivial changes to appease CRAN

Version 0.2
------------------------------------------------------------------------------

* Added more co-morbidity mappings, Elixhauser original and Quan/Elixhauser.
* Exposed more functions to public API
* Better conversion of ICD-9 codes to textual representation
* Expanded vignette
* Bug fixes and test cases
* Improved documentation

Version 0.1.1
------------------------------------------------------------------------------

* Include missing import for memoise
* optionally process AHRQ comorbidity subcategories into parent categories
* include the processed binary data. Unlikely to change often, and not too big.


Version 0.1
------------------------------------------------------------------------------

* First release. Fully functional, no known bugs, but will benefit from addition of planned features described in README.
