@@ -9,6 +9,7 @@ Version 0.3
 * Bug fixes, refactoring, more tests
 * Include parsing of hierarchy
 * Internal function which reads a file from a zip at a URL
+* The included pre-parsed data are slightly updated to include some missing top-level numbers when all the children were also present. ("043" %i9s% "04499" should equal "043" %i9s% "044")
 
 Version 0.2.1
 ------------------------------------------------------------------------------
